  - capture - support pcap flies with 0 timestamp
  - capture - use .arkime file extension for non standard pcap files
  - capture - new _dropBySession rule op
  - capture - fix infite recursion - thanks albntomat0_1
  - capture - improve udp/tcp header length checking
  - capture - improve error messages for field setting issues
  - capture - cache when getting pcap data from S3 (thanks pjsg)
  - wise - switch from node-sqlite3 to better-sqlite3 package
  - all - support creating gzip files, set simpleGzipBlockSize
  - all - support creating pcap files with short packet headers, set simpleShortHeader

3.2.1 2021/12/14
  - esproxy - handle sessions2 without prefix
  - capture - new parseHTTPHeaderValueMaxLen replaces hard coded 1024
  - viewer - some hunt fixes
  - viewer - switch from ES bool MUST to FILTER
  - viewer - increase elasticsearchScrollTimeout default
  - viewer - new AND arrays with ][ syntax vs OR arrays with []
  - viewer - fix --insecure which broke in 3.2.0
  - viewer - ES Nodes has new uptime stat
  - viewer - fix 3.x sending to remote cluster
  - viewer - disable periodic queries on multiviewer
  - viewer - history can always toggle open and show api
  - wise - fixed views that used require: not working
  - db.pl - sync-files, add-missing, and other fixes since 3.x

3.2.0 2021/12/07
  - release - node 14.18.2
  - release - remove daily.sh, setup a cron directly now
  - all - refactor some shared code into common directory
  - capture - fix memory leak with ip4 frags and packet q overflowing
  - capture - standardize on config error process exiting
  - capture - ietf quic improvements
  - tests - add some auth tests to test suite
  - viewer - jquery upgrade
  - viewer - help fields display improvements
  - viewer - support https urls in wise plugin (issue #1777)
  - viewer - fix history links with && not working
  - viewer - userAuthCreateTmpl improvements
  - viewer - fix cron and database bounding queries